--- a/style.css
+++ b/style.css
@@ -10,11 +10,10 @@ body {
 
 #chang-style {
     font-size: 20px;
-    text-align: center; 
-    position: absolute;
+    position: relative;
     top: 20%; 
-    right: 50%;
-    left: 12%;
+    right: 2%;
+    left: 1%;
   }
 
 .learn {
